--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Minimal</h1>
-        <p>A Theme for GitHub Pages</p>
-        <p class="view"><a href="http://github.com/orderedlist/minimal">View the Project on GitHub <small>orderedlist/minimal</small></a></p>
+        <h1>Dr. Reza Mousavi</h1>
+        <p>Faculty member at McIntire School of Commerce, The University of Virginia</p>
+        <p class="view"><a href="http://github.com/rezamousavi">GitHub <small>orderedlist/minimal</small></a></p>
+        <p class="view"><a href="https://www.commerce.virginia.edu">Webpage <small>orderedlist/minimal</small></a></p>
         <ul>
           <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
