--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <header>
         <h1>Dr. Reza Mousavi</h1>
         <p>Faculty member at McIntire School of Commerce, The University of Virginia</p>
-        <p class="view"><a href="http://github.com/rezamousavi">GitHub <small>orderedlist/minimal</small></a></p>
-        <p class="view"><a href="https://www.commerce.virginia.edu">Webpage <small>orderedlist/minimal</small></a></p>
+        <p class="view"><a href="http://github.com/rezamousavi">GitHub <small>github.com/rezamousavi</small></a></p>
+        <p class="view"><a href="https://www.commerce.virginia.edu">Webpage <small>github.com/rezamousavi</small></a></p>
         <ul>
-          <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <!-- <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="http://github.com/orderedlist/minimal">Fork On <strong>GitHub</strong></a></li>
+          <li><a href="http://github.com/orderedlist/minimal">Fork On <strong>GitHub</strong></a></li> -->
         </ul>
       </header>
       <section>
@@ -199,7 +199,7 @@ end
         <a href="http://search.yahoo.com/" title="Yahoo Search">Yahoo</a> or <a href="http://search.msn.com/" title="MSN Search">MSN</a>.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="http://github.com/orderedlist">Steve Smith</a></p>
+        <p>&#169;Reza Mousavi</p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
