--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <p>Faculty member at McIntire School of Commerce, The University of Virginia</p>
         <p class="view"><a href="http://github.com/rezamousavi">GitHub <small>github.com/rezamousavi</small></a></p>
         <p class="view"><a href="https://www.commerce.virginia.edu">Webpage <small>github.com/rezamousavi</small></a></p>
-        <ul>
-          <!-- <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
+        <!-- <ul>
+          <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="http://github.com/orderedlist/minimal">Fork On <strong>GitHub</strong></a></li> -->
-        </ul>
+          <li><a href="http://github.com/orderedlist/minimal">Fork On <strong>GitHub</strong></a></li> 
+        </ul> -->
       </header>
       <section>
         <h1>GitHub Flavored Markdown</h1>
