--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Minimal by Steve Smith</title>
+    <title>Reza Mousavi</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -26,23 +26,14 @@
         </ul> -->
       </header>
       <section>
-        <h1>GitHub Flavored Markdown</h1>
+        <h1>About</h1>
 
-        <p><em>View the <a href="http://github.github.com/github-flavored-markdown/sample_content.html">source of this content</a>.</em></p>
+        <p>I am a faculty member at McIntire School of Commerce at The University of Virginia. I am expert in data science and business analytics. My research topics are related to the societal impacts and economics of social media, data science and business analytics, user-generated content and healthcare information systems. I use machine learning, deep learning, natural language processing (NLP) along with econometrics to identify quasi experimental settings and study the underlying relationships among the constructs of interest. My work has appeared in Information Systems Research and Journal of Management Information Systems. My work has also been presented at international and national conferences such as CIST, WITS, WISE, ICIS, HICSS, and AMCIS. I won the best paper award (research-in-progress) at AMCIS 2014.</p>
 
-        <p>Let's get the whole "linebreak" thing out of the way. The next paragraph contains two phrases separated by a single newline character:</p>
+        
+        <p>I have taught advanced data science and business analytics, research methods, computer programming, and project management at the undergraduate, master, and doctorate levels. I have worked with leading consulting firms on a variety of data science projects. I was also a lead data scientist at State Farm Insurance Co. before joining academia.</p>
 
-        <p>Roses are red<br>
-        Violets are blue</p>
-
-        <p>The next paragraph has the same phrases, but now they are separated by two spaces and a newline character:</p>
-
-        <p>Roses are red<br><br>
-        Violets are blue</p>
-
-        <p>Oh, and one thing I cannot stand is the mangling of words with multiple underscores in them like perform_complicated_task or do_this_and_do_that_and_another_thing.</p>
-
-        <h2>A bit of the GitHub spice</h2>
+        <h2>Selected Journal Publications</h2>
 
         <p>In addition to the changes in the previous section, certain references are auto-linked:</p>
 
