--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
+        <img src="reza_mousavi_linkedin.png" alt="Trulli" width="150" height="165">
         <h1>Dr. Reza Mousavi</h1>
         <p>Faculty member at McIntire School of Commerce, The University of Virginia</p>
         <p class="view"><a href="http://github.com/rezamousavi">GitHub <small>github.com/rezamousavi</small></a></p>
