--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <img src="reza_mousavi_linkedin.png" alt="Trulli" width="150" height="165">
+        <img src="reza_mousavi_linkedin.png" alt="Trulli" width="150" height="200">
         <h1>Dr. Reza Mousavi</h1>
         <p>Faculty member at McIntire School of Commerce, The University of Virginia</p>
         <p class="view"><a href="http://github.com/rezamousavi">GitHub <small>github.com/rezamousavi</small></a></p>
@@ -31,12 +31,12 @@
 
         <p>I am a faculty member at McIntire School of Commerce at The University of Virginia. I am expert in data science and business analytics. My research topics are related to the societal impacts and economics of social media, data science and business analytics, user-generated content and healthcare information systems. I use machine learning, deep learning, natural language processing (NLP) along with econometrics to identify quasi experimental settings and study the underlying relationships among the constructs of interest. My work has appeared in Information Systems Research and Journal of Management Information Systems. My work has also been presented at international and national conferences such as CIST, WITS, WISE, ICIS, HICSS, and AMCIS. I won the best paper award (research-in-progress) at AMCIS 2014.</p>
 
-        
         <p>I have taught advanced data science and business analytics, research methods, computer programming, and project management at the undergraduate, master, and doctorate levels. I have worked with leading consulting firms on a variety of data science projects. I was also a lead data scientist at State Farm Insurance Co. before joining academia.</p>
 
-        <h2>Selected Journal Publications</h2>
+        <h2>Journal Publications</h2>
 
-        <p>In addition to the changes in the previous section, certain references are auto-linked:</p>
+        <p><b>Reza Mousavi,</b> Raghu T.S., and Keith Frey. "Harnessing Artificial Intelligence to Improve the Quality of Answers in Online Question-answering Health Forums,"
+<i>Journal of Management Information Systems (JMIS),</i> forthcoming.</p>
 
         <ul>
           <li>SHA: be6a8cc1c1ecfe9489fb51e4869af15a13fc2cd2</li>
