--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <img src="reza_mousavi_linkedin.png" alt="Trulli" width="150" height="200">
+        <img src="reza_mousavi_linkedin.png" alt="Trulli" width="150" height="180">
         <h1>Dr. Reza Mousavi</h1>
         <p>Faculty member at McIntire School of Commerce, The University of Virginia</p>
         <p class="view"><a href="http://github.com/rezamousavi">GitHub <small>github.com/rezamousavi</small></a></p>
@@ -37,6 +37,12 @@
 
         <p><b>Reza Mousavi,</b> Raghu T.S., and Keith Frey. "Harnessing Artificial Intelligence to Improve the Quality of Answers in Online Question-answering Health Forums,"
 <i>Journal of Management Information Systems (JMIS),</i> forthcoming.</p>
+        
+        <p><b>Reza Mousavi,</b> Monica Johar, and Vijay Mookerjee. <a href="https://pubsonline.informs.org/doi/10.1287/isre.2019.0889">"The Voice of the Customer: Managing Customer Care in Twitter,"<\a>
+<i>Information Systems Research (ISR),</i> (31:2), 2020.</p>
+        
+        <p><b>Reza Mousavi,</b> and Bin Gu. <a href="https://pubsonline.informs.org/doi/10.1287/isre.2018.0791">"The Impact of Twitter Adoption on Lawmakers’ Voting Orientations,"<\a>
+<i>Information Systems Research (ISR),</i> (30:1), 2019.</p>
 
         <ul>
           <li>SHA: be6a8cc1c1ecfe9489fb51e4869af15a13fc2cd2</li>
