--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <p>Faculty member at McIntire School of Commerce, The University of Virginia</p>
         <p class="view"><a href="http://github.com/rezamousavi" target="_blank">GitHub <small>github.com/rezamousavi</small></a></p>
         <p class="view"><a href="https://www.commerce.virginia.edu" target="_blank">Webpage <small>github.com/rezamousavi</small></a></p>
+        
+        <p class="view"><a href="CV_Reza.pdf" target="_blank">CV <small>CV</small></a></p>
+        
         <!-- <ul>
           <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
