--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>Faculty member at McIntire School of Commerce, The University of Virginia</p>
         <p class="view"><a href="http://github.com/rezamousavi" target="_blank">GitHub <small>github.com/rezamousavi</small></a></p>
         <p class="view"><a href="https://www.commerce.virginia.edu" target="_blank">Webpage <small>github.com/rezamousavi</small></a></p>
-        
+        <p class="view"><a href="https://www.linkedin.com/in/remousavi" target="_blank">LinkedIn <small>linkedin.com/in/remousavi</small></a></p>
         <p class="view"><a href="CV_Reza.pdf" target="_blank">CV </a></p>
         
         <!-- <ul>
