--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <header>
         <img src="reza_mousavi_linkedin.png" alt="Trulli" width="150" height="180">
         <h1>Dr. Reza Mousavi</h1>
-        <p>Faculty member at McIntire School of Commerce, The University of Virginia</p>
+        <p>Faculty member at <a href="https://www.commerce.virginia.edu">McIntire School of Commerce</a>,  <a href="https://www.virginia.edu">The University of Virginia</a></p> 
         <p class="view"><a href="http://github.com/rezamousavi" target="_blank">GitHub <small>github.com/rezamousavi</small></a></p>
-        <p class="view"><a href="https://www.commerce.virginia.edu" target="_blank">Webpage <small>github.com/rezamousavi</small></a></p>
+        <p class="view"><a href="https://www.commerce.virginia.edu/faculty/rm6uz" target="_blank">Webpage <small>commerce.virginia.edu/faculty/rm6uz</small></a></p>
         <p class="view"><a href="https://www.linkedin.com/in/remousavi" target="_blank">LinkedIn <small>linkedin.com/in/remousavi</small></a></p>
         <p class="view"><a href="CV_Reza.pdf" target="_blank">CV </a></p>
         
