--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <img src="reza_mousavi_linkedin.png" alt="Trulli" width="150" height="180">
-        <h1>Dr. Reza Mousavi</h1>
+        <h1>Dr. Rèza Mousavi</h1>
         <p>Faculty member at:</p> 
         <p><a href="https://www.commerce.virginia.edu" target="_blank"><img border="0" alt="W3Schools" src="mcint_logo.png" width="170" height="40"></a></p>
         <p><a href="https://www.virginia.edu" target="_blank"><img border="0" alt="W3Schools" src="uva_logo.png" width="170" height="was 68"></a></p> 
