update covid project

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <h2>Current Projects</h2>
 
-        <p><b>COVID-19 Project:</b> <a href = "https://arxiv.org/abs/2009.14097" target = "_blank">When Local Governments' Stay-at-Home Orders Meet the White House's "Opening Up America Again", <\a> with Dr. Bin Gu</p>
+        <p><b>COVID-19 Project:</b> <a href = "https://arxiv.org/abs/2009.14097" target = "_blank">When Local Governments' Stay-at-Home Orders Meet the White House's "Opening Up America Again", </a> with Dr. Bin Gu</p>
         
         <p><b>AirBnB Project:</b> <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3206895" target="_blank">Examining the Impacts of Airbnb's Review Policy Change on Listing Reviews,</a> with Dr. Kexin Zhao</p>
 
