--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <h2>Journal Publications</h2>
 
-        <p>Atkinson, Mary Layton <b> Mousavi, Reza</b>, Windett, Jason (2022) <a href="https://journals.sagepub.com/eprint/WZAVBCVCUAEQKP5XBG3X/full" target="_blank">"Detecting Diverse Perspectives: Using Text Analytics to Reveal Sex Differences in Congressional Debate About Defense,"</a>
+        <p>Atkinson, Mary Layton, <b> Mousavi, Reza</b>, Windett, Jason (2022) <a href="https://journals.sagepub.com/eprint/WZAVBCVCUAEQKP5XBG3X/full" target="_blank">"Detecting Diverse Perspectives: Using Text Analytics to Reveal Sex Differences in Congressional Debate About Defense,"</a>
 <i>Political Research Quarterly (PRQ),</i> 76(1), 75-89.</p>
           
         <p><b>Mousavi, Reza</b> Zhao, Kexin (2022) <a href="https://aisel.aisnet.org/jais/vol23/iss1/3/" target="_blank">"Examining the Impacts of Airbnb's Review Policy Change on Listing Reviews,"</a>
