--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <p><b>Mousavi, Reza,</b> Johar, Monica, Mookerjee, Vijay (2020) <a href="https://pubsonline.informs.org/doi/10.1287/isre.2019.0889" target="_blank">"The Voice of the Customer: Managing Customer Care in Twitter,"</a>
 <i>Information Systems Research (ISR),</i> (31:2), 340-360.</p>
         
-        <p><b>Reza Mousavi,</b> and Bin Gu. <a href="https://pubsonline.informs.org/doi/10.1287/isre.2018.0791" target="_blank">"The Impact of Twitter Adoption on Lawmakers’ Voting Orientations,"</a>
-<i>Information Systems Research (ISR),</i> (30:1), 2019.</p>
+        <p><b>Mousavi, Reza,</b> Gu, Bin (2019) <a href="https://pubsonline.informs.org/doi/10.1287/isre.2018.0791" target="_blank">"The Impact of Twitter Adoption on Lawmakers’ Voting Orientations,"</a>
+<i>Information Systems Research (ISR),</i> (30:1), 133-153.</p>
 
         
         <h2>Current Projects</h2>
