--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <ul>
         <li>Ph.D., Business Administration (Computer Information Systems), Arizona State University</p>
         <li>MBA, Operations Management, University of Tehran</p>
-        <li>B.S., Engineering, Sharif University of Technology</p>
+        <li>B.Sc., Engineering, Sharif University of Technology</p>
          </ul>
 
         <h2>Areas of Expertise</h2>
