--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         
         <h2>Education</h2>
         <ul>
-        <li>Ph.D., Business Administration (Computer Information Systems), Arizona State University</p>
-        <li>MBA, Operations Management, University of Tehran</p>
-        <li>B.Sc., Engineering, Sharif University of Technology</p>
+        <li>Ph.D., Business Administration (Computer Information Systems), Arizona State University</li>
+        <li>MBA, Operations Management, University of Tehran</li>
+        <li>B.Sc., Engineering, Sharif University of Technology</li>
          </ul>
 
         <h2>Areas of Expertise</h2>
