--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p><a href="https://profile.virginia.edu/rm6uz" target="_blank"><img border="0" alt="W3Schools" src="uva_logo.png" width="170" height="was 68"></a></p> 
         <p class="view"><a href="http://github.com/rezamousavi" target="_blank">GitHub <small>github.com/rezamousavi</small></a></p>
         <p class="view"><a href="https://www.linkedin.com/in/remousavi" target="_blank">LinkedIn <small>linkedin.com/in/remousavi</small></a></p>
-        <p class="view"><a href="https://github.com/rezamousavi/rezamousavi.github.io/blob/master/Reza-CV.pdf" target="_blank">CV </a></p>
+        <p class="view"><a href="https://github.com/rezamousavi/rezamousavi.github.io/blob/master/CV-Reza.pdf" target="_blank">CV </a></p>
         
         <!-- <ul>
           <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
