--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <img src="reza_mousavi_linkedin.png" alt="Trulli" width="150" height="180">
         <h1>Reza Mousavi, PhD, MBA</h1>
         <p>Faculty member at:</p> 
-        <p><a href="https://www.commerce.virginia.edu/faculty/rm6uz" target="_blank"><img border="0" alt="W3Schools" src="mcint_logo.png" width="170" height="40"></a></p>
-        <p><a href="https://profile.virginia.edu/rm6uz" target="_blank"><img border="0" alt="W3Schools" src="uva_logo.png" width="170" height="was 68"></a></p> 
+<!--         <p><a href="https://www.commerce.virginia.edu/faculty/rm6uz" target="_blank"><img border="0" alt="W3Schools" src="mcint_logo.png" width="170" height="40"></a></p> -->
+        <p><a href="https://www.commerce.virginia.edu/faculty/rm6uz" target="_blank"><img border="0" alt="W3Schools" src="uva_logo.png" width="170" height="was 68"></a></p> 
         <p class="view"><a href="http://github.com/rezamousavi" target="_blank">GitHub <small>github.com/rezamousavi</small></a></p>
         <p class="view"><a href="https://www.linkedin.com/in/remousavi" target="_blank">LinkedIn <small>linkedin.com/in/remousavi</small></a></p>
         <p class="view"><a href="https://github.com/rezamousavi/rezamousavi.github.io/blob/master/CV-Reza.pdf" target="_blank">CV <small>CV</small></a></p>
