--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p class="view"><a href="http://github.com/rezamousavi" target="_blank">GitHub <small>github.com/rezamousavi</small></a></p>
         <p class="view"><a href="https://www.linkedin.com/in/r-mousavi" target="_blank">LinkedIn <small>linkedin.com/in/r-mousavi</small></a></p>
         <p class="view"><a href="https://huggingface.co/paragon-analytics" target="_blank">HuggingFace <small>huggingface.co/paragon-analytics</small></a></p>
-        <p class="view"><a href="https://github.com/rezamousavi/rezamousavi.github.io/blob/master/CV-Reza.pdf" target="_blank">CV <small>CV</small></a></p>
+        <p class="view"><a href="https://github.com/rezamousavi/rezamousavi.github.io/blob/master/CV-Reza.pdf" target="_blank">CV</a></p>
         
         <!-- <ul>
           <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
