--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <section>
         <h1>About</h1>
 
-        <p>I am a faculty member at McIntire School of Commerce at The University of Virginia. I am expert in data science and analytics. My research topics are related to the societal impacts and economics of AI, data science and business analytics, user-generated content and healthcare information systems. I use machine learning, deep learning, natural language processing (NLP) along with econometrics to identify quasi experimental settings and study the underlying relationships among the constructs of interest. My work has appeared in ISR, JMIS, JAIS, and PRQ. My work has also been presented at international and national conferences such as CIST, WITS, WISE, ICIS, HICSS, and AMCIS.</p>
+        <p>Thank you for visiting my page! I am a faculty member at The University of Virginia. I am an expert in data science and analytics. My research topics are related to the societal impacts and economics of AI, data science and business analytics, user-generated content, and healthcare information systems. I use machine learning, deep learning, natural language processing (NLP), and econometrics to identify quasi-experimental settings and study the underlying relationships among the constructs of interest. My work has appeared in ISR, JMIS, JAIS, and PRQ. My work has also been presented at international and national conferences such as CIST, WITS, WISE, ICIS, HICSS, and AMCIS.</p>
 
-        <p>I have taught advanced data science and business analytics, research methods, computer programming, and project management at the undergraduate, master, and doctorate levels. I have worked with leading consulting firms on a variety of data science projects. I was also a lead data scientist at State Farm Insurance Co. before joining academia.</p>
+        <p>I have taught advanced data science and business analytics, research methods, computer programming, and project management at the undergraduate, master, and doctorate levels. I have worked with leading consulting firms on various data science projects. Before joining academia, I was a lead data scientist at State Farm Insurance Co..</p>
 
         
         <h2>Education</h2>
