--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <img src="reza_mousavi_linkedin.png" alt="Trulli" width="150" height="180">
+        <img src="IMG_6427.jpeg" alt="Trulli" width="150" height="180">
         <h1>Reza Mousavi, PhD, MBA</h1>
         <p>Faculty member at:</p> 
 <!--         <p><a href="https://www.commerce.virginia.edu/faculty/rm6uz" target="_blank"><img border="0" alt="W3Schools" src="mcint_logo.png" width="170" height="40"></a></p> -->
