--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <h2>Journal Publications</h2>
 
-        <p><b> Mousavi, Reza, </b> Gu, Bin (forthcoming) <a href="https://pubsonline.informs.org/doi/10.1287/isre.2021.0599" target="_blank">"The Effect of Resilience Communications on Community Compliance during Crises,"</a> <i>Information Systems Research (ISR).</i> </p>
+        <p><b> Mousavi, Reza, </b> Gu, Bin (forthcoming) <a href="https://pubsonline.informs.org/doi/10.1287/isre.2021.0599" target="_blank">"Resilience Messaging: The Effect of Governors’ Social Media Communications on Community Compliance During a Public Health Crisis,"</a> <i>Information Systems Research (ISR).</i> </p>
 
         <p> Alavi, Maryam, Leidner, Dorothy, <b> Mousavi, Reza, </b> (2024) <a href="https://aisel.aisnet.org/jais/vol25/iss1/15/" target="_blank">"A Knowledge Management Perspective of Generative Artificial Intelligence,"</a> <i>Journal of the Association for Information Systems,</i> 25(1), 1-12.</p>
 
