--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <p><b> Mousavi, Reza, </b> Gu, Bin (forthcoming) <a href="https://pubsonline.informs.org/doi/10.1287/isre.2021.0599" target="_blank">"Resilience Messaging: The Effect of Governors’ Social Media Communications on Community Compliance During a Public Health Crisis,"</a> <i>Information Systems Research (ISR).</i> </p>
 
-        <p> Alavi, Maryam, Leidner, Dorothy, <b> Mousavi, Reza, </b> (2024) <a href="https://aisel.aisnet.org/jais/vol25/iss1/15/" target="_blank">"A Knowledge Management Perspective of Generative Artificial Intelligence,"</a> <i>Journal of the Association for Information Systems,</i> 25(1), 1-12.</p>
+        <p> Alavi, Maryam, Leidner, Dorothy, <b> Mousavi, Reza, </b> (2024) <a href="https://aisel.aisnet.org/jais/vol25/iss1/15/" target="_blank">"A Knowledge Management Perspective of Generative Artificial Intelligence,"</a> <i>Journal of the Association for Information Systems (JAIS),</i> 25(1), 1-12.</p>
 
         <p>Atkinson, Mary Layton, <b> Mousavi, Reza,</b> Windett, Jason (2022) <a href="https://journals.sagepub.com/eprint/WZAVBCVCUAEQKP5XBG3X/full" target="_blank">"Detecting Diverse Perspectives: Using Text Analytics to Reveal Sex Differences in Congressional Debate About Defense,"</a>
 <i>Political Research Quarterly (PRQ),</i> 76(1), 75-89.</p>
