--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         
         <p><b>Obesity Project:</b>"Healthy Relationships and Healthy Eating: How Stressors and Social Support Influence Food Consumption and Obesity," with Chiraag Mittal and Kelly Haws, Under Revision.</p>
 
-        <p><b>GenAI Labeleing Project:</b>"From Lexicons to Large Language Models: A Holistic Evaluation of Psychometric Text Analysis in Business Research," with Brent Kitchens, Abbie Oliver, and Ahmed Abbasi, Under Review.</p>
+        <p><b>GenAI Labeleing Project:</b>"From Lexicons to Large Language Models: A Holistic Evaluation of Psychometric Text Analysis in Business Research," with Brent Kitchens, Abbie Oliver, and Ahmed Abbasi, Under Revision.</p>
    
         <p><b>GenAI & Lit. Reviews Project:</b>"Generative Artificial Intelligence and the Future of Literature Reviews and Scientific Inquiry," with Gerit Wagner, Julian Prester, Roman Lukyanenko , and Guy Pare, Under Review.</p>
      
