--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <img src="IMG_6427.jpeg" alt="Trulli" width="150" height="155">
         <h1>Reza Mousavi, PhD, MBA</h1>
-        <p>Faculty member at:</p> 
+        <p>Associate Professor at:</p> 
 <!--         <p><a href="https://www.commerce.virginia.edu/faculty/rm6uz" target="_blank"><img border="0" alt="W3Schools" src="mcint_logo.png" width="170" height="40"></a></p> -->
         <p><a href="https://www.commerce.virginia.edu/faculty/rm6uz" target="_blank"><img border="0" alt="W3Schools" src="uva_logo.png" width="170" height="was 68"></a></p> 
         <p class="view"><a href="http://github.com/rezamousavi" target="_blank">GitHub <small>github.com/rezamousavi</small></a></p>
@@ -49,7 +49,7 @@
         <h2>Areas of Expertise</h2>
         
         <ul>
-          <li>Data science & business analytics</li>
+          <li>AI & analytics</li>
           <li>Natural language processing (NLP) & generative AI</li>
           <li>Societal impacts of AI</li>
           <li>Economics of social media</li>
