--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 
         <h2>Journal Publications</h2>
 
+        <p>Mittal, Chiraag, <b> Mousavi, Reza, </b> Haws, Kelly (accepted) <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5384546" target="_blank">"Healthy Relationships and Healthy Eating: How Stressful Events and Social Support Affect Indulgence,"</a> <i>Journal of Marketing.</i> </p>
+        
         <p><b> Mousavi, Reza, </b> Gu, Bin (2024) <a href="https://pubsonline.informs.org/doi/10.1287/isre.2021.0599" target="_blank">"Resilience Messaging: The Effect of Governors’ Social Media Communications on Community Compliance During a Public Health Crisis,"</a> <i>Information Systems Research (ISR).</i> </p>
 
         <p> Alavi, Maryam, Leidner, Dorothy, <b> Mousavi, Reza, </b> (2024) <a href="https://aisel.aisnet.org/jais/vol25/iss1/15/" target="_blank">"A Knowledge Management Perspective of Generative Artificial Intelligence,"</a> <i>Journal of the Association for Information Systems (JAIS),</i> 25(1), 1-12.</p>
@@ -87,8 +89,6 @@
         <p><b>For the full list of conference proceedings and presentations, please see my CV.</b></p>
 
         <p><b>Cyberbang Project:</b>"Words Matter When Gangs Cyberbang: Predicting Imminent Urban Violence from Gang Members' Social Media Posts," with Sherry Fowler, Antonis Stylianou, D.S. Zhang, Paul Lowry, and Shannon Reid, Under Revision.</p>
-        
-        <p><b>Obesity Project:</b>"Healthy Relationships and Healthy Eating: How Stressors and Social Support Influence Food Consumption and Obesity," with Chiraag Mittal and Kelly Haws, Under Revision.</p>
 
         <p><b>GenAI Labeleing Project:</b>"From Lexicons to Large Language Models: A Holistic Evaluation of Psychometric Text Analysis in Business Research," with Brent Kitchens, Abbie Oliver, and Ahmed Abbasi, Under Revision.</p>
    
