--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section>
         <h1>About</h1>
 
-        <p>Thank you for visiting my page! I am a professor at The University of Virginia. I am an expert in AI and analytics. My research topics are related to the societal impacts and economics of AI, data science and business analytics, user-generated content, and healthcare information systems. I use machine learning, deep learning, natural language processing (NLP), and econometrics to identify quasi-experimental settings and study the underlying relationships among the constructs of interest. My work has appeared in ISR, JMIS, JAIS, and PRQ.</p>
+        <p>Thank you for visiting my page! I am a professor at The University of Virginia. I am an expert in AI and analytics. My research topics are related to the societal impacts and economics of AI, data science and business analytics, user-generated content, and healthcare information systems. I use machine learning, deep learning, natural language processing (NLP), and econometrics to identify quasi-experimental settings and study the underlying relationships among the constructs of interest. My work has appeared in Information Systems Research, Journal of MIS, Journal of AIS, Journal of Marketing, and Political Research Quarterly.</p>
 
         <p>I have taught advanced AI and business analytics, research methods, computer programming, and project management at the undergraduate, masters, and doctorate levels. I have worked with leading consulting firms on various data science projects. Before joining academia, I was a lead data scientist at State Farm Insurance Co.</p>
 
@@ -50,7 +50,7 @@
         
         <ul>
           <li>AI & analytics</li>
-          <li>Natural language processing (NLP) & generative AI</li>
+          <li>Natural language processing (NLP), large language models (LLM), & generative AI</li>
           <li>Societal impacts of AI</li>
           <li>Economics of social media</li>
           <li>AI in healthcare</li>        
