--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <h2>Journal Publications</h2>
 
-        <p><b>Mousavi, Reza, </b> Kitchens, Brent, Oliver, Abbie, Abbasi, Ahmed (forthcoming) "From Lexicons to Large Language Models: A Holistic Evaluation of Psychometric Text Analysis in Social Science Research,,"</a> <i>Information Systems Research (ISR).</i> </p>
+        <p><b>Mousavi, Reza, </b> Kitchens, Brent, Oliver, Abbie, Abbasi, Ahmed (forthcoming) <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4776480" target="_blank">"From Lexicons to Large Language Models: A Holistic Evaluation of Psychometric Text Analysis in Social Science Research,"</a> <i>Information Systems Research (ISR).</i> </p>
         
         <p>Mittal, Chiraag, <b> Mousavi, Reza, </b> Haws, Kelly (forthcoming) <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5384546" target="_blank">"Healthy Relationships and Healthy Eating: How Stressful Events and Social Support Affect Indulgence,"</a> <i>Journal of Marketing.</i> </p>
         
